WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
280196
[ARMv7] Return exceptions from operations using long long
https://bugs.webkit.org/show_bug.cgi?id=280196
Summary
[ARMv7] Return exceptions from operations using long long
Justin Michaud
Reported
2024-09-23 11:57:41 PDT
[ARMv7] Return exceptions from operations using long long
Attachments
Add attachment
proposed patch, testcase, etc.
Justin Michaud
Comment 1
2024-09-23 12:08:27 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/34098
EWS
Comment 2
2024-09-26 19:47:22 PDT
Committed
284329@main
(3ebc10609bfe): <
https://commits.webkit.org/284329@main
> Reviewed commits have been landed. Closing PR #34098 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2024-09-26 19:48:15 PDT
<
rdar://problem/136798250
>
Fujii Hironori
Comment 4
2024-09-26 21:46:53 PDT
Regressed:
Bug 280498
– REGRESSION(
284329@main
): [Win] workers/wasm-hashset.html is crashing
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug