[ARMv7] Return exceptions from operations using long long https://bugs.webkit.org/show_bug.cgi?id=280196

Reviewed by Keith Miller.

In JSToWasm, we now return exceptions via a register to make the ARMv7
port match the 64-bit ports. Returning an EncodedJSValue + an exception
is still not supported, so we modify the signatures of these JSToWasm
operations to return pointers or void instead.

We also fix a little issue with the templating logic, and add a static_assert
preventing it from happening again.

* Source/JavaScriptCore/jit/CCallHelpers.h:
(JSC::CCallHelpers::operationExceptionRegister):
* Source/JavaScriptCore/jit/OperationResult.h:
(JSC::asExceptionResultBase):
(JSC::requires):
(JSC::ExceptionOperationImplicitResult::operator ExceptionOperationResultTag):
(JSC::ExceptionOperationImplicitResult::operator To):
(JSC::ExceptionOperationImplicitResult<void>::operator ExceptionOperationResultVoid):
(JSC::makeOperationResult):
* Source/JavaScriptCore/wasm/WasmOperations.cpp:
(JSC::Wasm::JSC_DEFINE_JIT_OPERATION):
* Source/JavaScriptCore/wasm/WasmOperations.h:
* Source/JavaScriptCore/wasm/js/JSToWasm.cpp:
(JSC::Wasm::marshallJSResult):
(JSC::Wasm::createJSToWasmJITShared):

Canonical link: https://commits.webkit.org/284329@main